@@ -68,6 +68,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #15977: Fix memory leak in Modules/_ssl.c when the function
+  _set_npn_protocols() is called multiple times, thanks to Daniel Sommermann.
+
 Tests
 -----
 
